<resources>
    <string name="app_name">TrackingApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- activity_sign_in strings -->
    <string name="string_login_title">Accedi</string>
    <string name="string_title_alternative_login">Oppure accedi con</string>
    <string name="string_email_button">e-mail</string>

    <!-- navbar strings -->
    <string name="string_track">Traccia</string>
    <string name="string_follow">Segui</string>
    <string name="string_notification_center">Notifiche</string>
    <string name="string_settings">Impostazioni</string>

    <!-- Mapbox token -->

    <string name="access_token">pk.eyJ1IjoidHJhY2tpbmdhcHAiLCJhIjoiY2pyczZlcDRsMjB0azQ0bnRuNHgwaXptYiJ9.ef-BXxvp9qnffAr8UL-jdA</string>


    <string name="str_ConnectionDialog_Title">Codice di connessione</string>
    <string name="str_ConnectionDialog_Info">Fornisci il codice di connessione ad una persona fidata: le darai accesso alle tue informazioni per permettere un tempestivo soccorso</string>
    <string name="str_ConnectionDialog_BtnOk">Inizia Attività</string>
    <string name="str_ConnectionDialog_BtnAvanti">ANNULLA</string>

    <string-array name="activities">
        <item name="Trekking">Escursionismo</item>
        <item name="mtb">MTB</item>
        <item name="Ski">Sci alpinismo</item>
    </string-array>

    <!-- Account Settings -->
    <string name="userNameSurname">Nome Completo</string>
    <string name="personal_telephone_number">Numero di telefono</string>
    <string name="connected_telephone_number">Numero della persona connessa</string>
    <string name="alarm_telephone_number">Numero di Allarme</string>
    <string name="cambiaInfo">Cambia Informazioni</string>
    <string name="salvaInfo">Salva</string>
    <string name="btnLogout">Logout</string>
    <string name="noInternetConnection">Nessuna connessione internet disponibile \n</string>
    <string name="connesioneLenta">Connessione lenta!\ni dati veranno caricati a breve</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!--  General settings -->
    <string name="pref_header_general">General</string>
    <string name="account_settings">Account Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="channel1_name">ServiceNotificationChannel</string>
    <string name="channel1_description">Questo canale è usato per notificare
        all\'utente che il servizio in background è in funzione</string>
    <string name="channel2_name">StopNotificationChannel</string>
    <string name="channel2_description">Questo canale è usato per notificare
        all\'utente che il servizio in background è attivo e dovrebbe chiuderlo!</string>

    <string name="titoloEscursione">Escursione in funzione</string>
    <string name="testoEscursione">Stiamo inviando la tua posizione ai nostri server in Background</string>
    <string name="escursioneNonDisattivata">Escursione non disattivata</string>
    <string name="stopEscursione">La escursione è ancora attiva il tempo di rientro è passato ,\nchiudi
    l\'escursione altrimenti verrà in viato un messaggio\nalla persona connessa e uno ai soccorsi.</string>
    <string name="smsSentTitle">Invio SMS</string>
    <string name="smsConnectedSent">E\' stato inviato un sms al numero della persona connessa , per la mancata chiusura del servizio</string>
    <string name="smsAlarmSent">E\' stato inviato un sms al numero dell\'allarme inserito , per la mancata chiusura del servizio</string>
    <string name="keyword">Parola Chiave</string>
    <string name="ablita_sms">Abilità SMS</string>
    <string name="title_settings">Settings</string>
    <string name="sms_settings">Sms Settings</string>
    <string name="accuracy">Accuracy:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="abilita_googleMapsSms">Invia google Maps SMS\nLink con la posizione</string>
    <string name="abilita_locationSms">Invia un SMS con :\nLatitudine,Longitudine,Precizione,Velocità</string>
    <string name="salvasharedpref">Salva impostazioni</string>
    <string name="abilita_singleSms">Invia un SMS con :\nLocation e Google maps link\nAltri sms non verranno inviati</string>

    <string name="gpsMessage">GPS è disabilitato sul tuo dispotivo.
        Vorresti abilitarlo? è neccessario per l \'utilizzo dell\'app\n\n\Se il gps è attivo cambia il gps mode su "HIGH ACCURACY"\n\nCliccando su \"no grazie\" l\'app verrà chiusa!</string>
    <string name="changeGpsmode">Gps Mode è selezionato su \"Dispositivo solo  o su BATTERY SAVING\".\nCambia GPS mode su :\"HIGH ACCURACY\"</string>
    <string name="permissionsMessage">I permessi sono necessari per il funzionamento dell\'applicazione.\n\nCliccando su \"cancel\" l\'app verrà chiusa!</string>

    <!--  Layer -->
    <string name="outdoor">Outdoor</string>
    <string name="satellite">Satellite</string>
    <string name="strade">Strade</string>

</resources>
