<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/icon_outline_navigation_24"
        android:title="@string/string_track" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@drawable/icon_outline_person_pin_circle_24"
        android:title="@string/string_follow" />

    <item
        android:id="@+id/navigation_notification_center"
        android:icon="@drawable/icon_outline_notifications_24"
        android:title="@string/string_notification_center" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_outline_settings_24"
        android:title="@string/string_settings" />
</menu>
