<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/sms_keywordcard"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/keyword" />

            <EditText
                android:id="@+id/txtkeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sms_settingscard"
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="399dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/title_settings"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/enableSms"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/enableSms"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/ablita_sms"
                app:layout_constraintBottom_toTopOf="@+id/swgoogleMapsSms"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Switch
                android:id="@+id/swgoogleMapsSms"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/abilita_googleMapsSms"
                app:layout_constraintBottom_toTopOf="@+id/swlocationSms"
                app:layout_constraintTop_toBottomOf="@+id/enableSms" />


            <Switch
                android:id="@+id/swlocationSms"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/abilita_locationSms"
                app:layout_constraintBottom_toTopOf="@+id/btnsalvaSharedprefe"
                app:layout_constraintTop_toBottomOf="@+id/swgoogleMapsSms" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnsalvaSharedprefe"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/salvasharedpref"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swlocationSms" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>