<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="ssd.tesina.trackingApp.fragments.viewmodels.LayerStyleDialogViewModel"/>
        <variable
            name="viewModel"
            type="ssd.tesina.trackingApp.fragments.viewmodels.LayerStyleDialogViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baseConnectionDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewConnectionDialog"
            android:layout_width="250dp"
            android:layout_height="380dp"
            android:layout_marginStart="8dp"
            android:minHeight="200dp"
            android:theme="@style/Widget.MaterialComponents.CardView"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.558">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageViewOutdoor"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:tint="@{viewModel.outdoorSelected == true ? viewModel.color : @android:color/white }"
                    android:tintMode="multiply"
                    app:layout_constraintBottom_toTopOf="@+id/imageViewSat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/mb_outdoor" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/outdoor"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewOutdoor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageViewOutdoor" />

                <ImageButton
                    android:id="@+id/imageViewSat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageViewMbStreets"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewOutdoor"
                    android:tint="@{viewModel.satelliteSelected == true ? viewModel.color : @android:color/white }"
                    android:tintMode="multiply"
                    app:srcCompat="@drawable/mb_satellite"
                    android:scaleType="fitCenter"
                    android:padding="3dp"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/satellite"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewSat"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/imageViewSat"
                    app:layout_constraintVertical_bias="0.442" />

                <ImageButton
                    android:id="@+id/imageViewMbStreets"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewSat"
                    android:tint="@{viewModel.streetSelected == true ? viewModel.color : @android:color/white }"
                    android:tintMode="multiply"
                    app:srcCompat="@drawable/mb_style_streets"
                    android:scaleType="fitCenter"
                    android:padding="3dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/strade"
                    android:textColor="#000"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewMbStreets"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/imageViewMbStreets" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>